fix(Login Page): Design Add background image Change accent colour to green Hide content on small screen

--- a/src/app/pages/authentication/login/login.component.scss
+++ b/src/app/pages/authentication/login/login.component.scss
@@ -10,13 +10,22 @@
 }
 
 .left-half{
-  flex: 1;
   display: flex;
-  flex-direction: column;
-  align-items: start;
-  //justify-content: center;
-  background: #FFFFFF;
+  align-items: center;
+  justify-content: center;
   padding: 5rem 4%;
+  width: 50%;
+  flex: 1;
+}
+
+.left-content{
+  display: flex;
+  align-items: center;
+  //justify-content: center;
+  padding: 0 4%;
+  width: 20%;
+  height: 100%;
+  flex:1;
 }
 
 .right-half {
@@ -70,7 +79,7 @@
   align-items: center;
   height: 5rem;
   width: 100%;
-  background: var(--accent-orange);
+  background: var(--accent-green);
   border-radius: .8rem;
   font-size: 1.8rem;
   font-weight: 600;
@@ -92,7 +101,7 @@
   display: block;
   width: 100%;
   height: 2px;
-  background-color: var(--accent-orange);
+  //background-color: var(--accent-green);
   margin-top: 7px; /* Adjust as needed */
 }
 
@@ -105,6 +114,9 @@
 
 @media (max-width: 1110px) {
   .right-half{
+    display: none;
+  }
+  .left-content{
     display: none;
   }
 }
